--- a/css/style.css
+++ b/css/style.css
@@ -2,115 +2,135 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+    outline: 0;
+    border: 0;
 }
+
+
 
 body{
     background-color: #B28AF8;
 }
 
+
+
+
+
+/*--------------------------------------------Header section------------------------------------*/
 .header{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-}
-
-.header .navbar{
-    width: 100%;
-    height: 80px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    position: absolute;
-    margin-top: 25px;
+    justify-content: space-between;
+    padding:1.5rem 7%;
+    top:0; left: 0; right: 0;
+    z-index: 1000;
 }
 
-.logo{
-    margin-left: 100px;
-}
-
-.logo i{
-    font-size: 20px;
-    font-weight: 700;
-    color: #B28AF8;
+.header .logo i{
+    font-size: 25px;
+    color: #956AE1;
     background-color: #fff;
     padding: 10px;
-    border-radius: 50px;
-    text-decoration: none;
-    transition: .3s ease;
-}
-
-.logo i:hover{
-    transform: scale(1.2);
-}
-
-.menu{
-    display: inline-block;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.menu ul li{
-    display: inline-block;
-    color: #fff;
-    padding: 0 20px;
-    cursor: pointer;
-    font-size: 15px;
-    line-height: 80px;
-    align-items: center;
-    transition: .3s ease;
-}
-
-.menu ul li:hover{
-    font-weight: bolder;
-    transform: scale(1.3);
-}
-
-.contact-btn{
-    display: block;
-    font-size: 15px;
-    color: #fff;
-    border: 1px solid white;
     border-radius: 30px;
-    padding: 8px 40px;
-    margin-right: 100px;
-    cursor: pointer;
-    transition: .3s ease;
 }
 
-.contact-btn:hover{
-    background-color: #fff;
-    color: #B28AF8;
-    cursor: pointer;
+.header .navbar a{
+    margin: 10px;
+    font-size: 16px;
+    color: #fff;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
+.header .navbar a:hover{
+    color: #CFB3FF;
+}
+
+.contact a{
+    text-decoration: none;
+    color: #fff;
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+
+#menu-btn{
+    display: none;
 }
 
 
 
+/*-------------------------------Body section-----------------------------*/
 .body-section{
     height: 100vh;
-    width: 100%;
+    
     position: relative;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     align-items: center;
 }
 
+.body-section::before{
+    content: url(../img/bg-img1.png);
+    width: 20px;
+    height: 20px;
+    z-index: 999;
+    position: absolute;
+    left: 90px;
+    top: 30px;
+    
+}
+
+/*#bg-img1{
+    width: 65px;
+    position: absolute;
+    top: 50px;
+    left: 95px;
+}
+
+#bg-img2{
+    width: 65px;
+    position: absolute;
+    top: 95px;
+    left: 640px;
+}*/
+
 .body-details{
-    padding: 40px;
+    position: relative;
+    top: -70px;
+    left: 50px;
 }
 
 
 .body-section img{
-    width: 420px;
+    width: 44%;
     position: absolute;
-    right: 50px;
-    bottom: 100px;
+    right: 30px;
+    top: 50px;   
+}
+
+.body-section .conent-info{
+    position: relative;
+}
+
+.body-section .content-info::before{
+    content: url(../img/bg-img2.png);
+    width: 20px;
+    height: 20px;
+    z-index: 999;
+    position: absolute;
+    left: 550px;
+    top: 0;
 }
 
 .body-section h3{
     margin-top: 50px;
     font-size: 20px;
     color: #fff;
+    font-size: 25px;
     font-weight: 700;
 }
 
@@ -193,24 +213,32 @@ body{
 section{
     padding: 50px;
 }
-.section{
-    padding: 50px;
-}
+
 
 .heading-part{
+    position: relative;
     text-align: center;
     color: #fff;
+}
+
+
+
+.bg-img3{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90px;
 }
 
 .heading-part h1{
     font-size: 30px;
     font-weight: bold;
-    letter-spacing: 2px;
 }
 
 .wrapper{
-    max-width: 1200px;
+    max-width: 1000px;
     position: relative;
+    margin: 0 auto;
 }
 
 .wrapper i{
@@ -284,6 +312,7 @@ section{
     font-size: 30px;
     margin-bottom: 30px;
 }
+
 
 .about-info .about-details h5{
     font-size: 20px;
@@ -425,25 +454,21 @@ section{
 
 
 /*---------------------------Portfolio part---------------------*/
-.box-part{
-    margin-top: 40px;
-    display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
-	gap: 1.5rem;
-}
 
-.box-part .boxs{
+.boxs{
+    width: 250px;
+	height: 280px;
     background-color: #B28AF8;
     border-radius: 25px;
 }
 
-.box-part .boxs .image{
+.boxs .image{
     width: 100%;
     height: 70%;
     overflow: hidden; 
 }
 
-.box-part .boxs .image img{
+.boxs .image img{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -451,12 +476,12 @@ section{
     transition: .3s;
 }
 
-.box-part .boxs .image img:hover{
+.boxs .image img:hover{
     transform: scale(1.2);
 }
 
 
-.box-part .boxs .content-part a{
+.boxs .content-part a{
     color: #fff;
     display: block;
     margin-top: 20px;
@@ -467,28 +492,13 @@ section{
     margin-bottom: 10px;
 }
 
-.box-part .boxs .content-part p{
+.boxs .content-part p{
     font-size: 13px;
     color: #fff;
     margin-bottom: 20px;
     text-align: center;
 }
 
-.slider{
-    margin-top: 40px;
-    text-align: center;
-    padding: 15px;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.slider i{
-    color: #fff;
-    background-color: #CFB3FF;
-    padding: 12px;
-    font-size: 18px;
-    border-radius: 40px;
-}
 
 
 
@@ -580,10 +590,7 @@ footer .row .col h3{
     margin-bottom: 10px;
 }
 
-hr{
-    width: 85%;
-    margin: auto;
-}
+
 
 .social-icon{
     display: flex;
@@ -620,7 +627,7 @@ hr{
 
 /*-------------------------------------Responsive Part-------------------------*/
 
-@media (min-width: 1281px) { 
+/*@media (min-width: 1281px) { 
 }
 
 
@@ -649,8 +656,24 @@ hr{
 }
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  #menu-btn{
+    display: inline-block;
+  }
+
+  .header .navbar{
+    position: absolute;
+    top: 100%;
+    right:0;
+    width: 30rem;
+    height: 100vh;
+  }
   
-}
+  .header .navbar a{
+    display: block;
+    margin: 1.5rem;
+    padding: .5rem;
+  }
+
 
 @media (min-width: 481px) and (max-width: 767px) {
   
@@ -725,7 +748,7 @@ hr{
   ##Device = Most of the Smartphones Mobiles (Portrait)
   ##Screen = B/w 320px to 479px
 */
-
+/*
 @media (min-width: 320px) and (max-width: 480px) {
   .header .navbar{
     width: 100%;
@@ -769,9 +792,20 @@ hr{
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   }
 
-  
+
+}*/
+
+
+
+
+@media screen and (max-width: 768px) {
+    .agency-part ul{
+         width: 100%;
+    }
 }
 
-
-
-
+@media screen and (max-width: 320px) {
+    .body-section img{
+        visibility: hidden;
+    }
+}
